--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"moment": "^2.30.1",
 		"nanoid": "^5.0.4",
 		"stopword": "^3.0.1",
+		"svelte-loading-spinners": "^0.3.4",
 		"tailwind-merge": "^2.2.0",
 		"tailwind-variants": "^0.1.19"
 	}
